--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Angel Alegre",
   "license": "ISC",
   "devDependencies": {
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
